--- a/camara.html
+++ b/camara.html
@@ -13,6 +13,7 @@
     </header>
 
     <main>
+        <video id="video" autoplay></video> <!-- Video para la vista previa -->
         <img id="img-preview" src="icons/No Image.png" alt="Vista previa de la imagen">
         <input type="text" id="title-input" placeholder="Título de la foto">
         <button id="publish-button">Publicar</button>
