--- a/index.html
+++ b/index.html
@@ -14,28 +14,14 @@
     
     <main>
         <div id="img-model">
-            <h4>No hay fotos publicadas aún</h4>
             <img src="icons/No Image.png" alt="Imagen modelo" id="img-preview">
-            <p>Agrega tu primera fotografía!</p>
         </div>
-
-        <button id="capture-button">Tomar Fotografía</button>
-        <div id="photo-reel"></div>
+        <div id="images-container"></div> 
+        <button id="capture-button">
+            <img src="icons/icon camera.png">
+        </button>
     </main>
-
+    
     <script src="index.js"></script>
-    <script src="camera.js"></script>
-    <script>if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js')
-            .then(registration => {
-                console.log('Service Worker registrado con éxito:', registration.scope);
-            })
-            .catch(error => {
-                console.log('Error al registrar el Service Worker:', error);
-            });
-        });
-    }
-    </script>
 </body>
 </html>
